--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ li {
 
 header {
     border-top: 0.4375rem solid #fbd45a;
+    width: 100vw;
 }
 
 .logo {
@@ -265,6 +266,7 @@ header {
         justify-content: space-between;
         padding: 0 1rem;
         overflow: hidden;
+        width: 100vw;
     }
 }
 
@@ -283,6 +285,7 @@ header {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    margin-top: 10%;
 }
 
 .overlay {
@@ -290,6 +293,7 @@ header {
     display: flex;
     text-align: center;
     justify-content: center;
+    align-items: center;
     background: linear-gradient( to right, rgba(0, 230, 64, 0.5), rgb(152, 158, 73, 0.5));
     width: 100%;
     height: 100%;
@@ -297,13 +301,6 @@ header {
     top: 0;
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
-}
-
-.overlay .overlay-text {
-    margin-top: 7%;
-    text-align: center;
-    align-items: center;
-    padding-top: 6.25rem;
 }
 
 .overlay-text h1 {
@@ -341,15 +338,6 @@ header {
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-    .overlay .overlay-text {
-        margin-top: 40%;
-        text-align: center;
-        align-items: center;
-        padding-top: 6.25rem;
-    }
-}
-
 
 /* END OF HERO SECTION
 
@@ -363,6 +351,8 @@ header {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     place-items: center;
+    max-width: 1300px;
+    margin-inline: auto;
 }
 
 .donate-image {
@@ -425,7 +415,7 @@ header {
     height: 6.25rem;
 }
 
-@media screen and (min-width: 280px) and (max-width: 769px) {
+@media screen and (min-width: 280px) and (max-width: 767px) {
     .donate-box {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
@@ -464,10 +454,9 @@ header {
     grid-template-columns: repeat(2, 1fr);
     height: 100vh;
     position: relative;
-    padding-right: 3.75rem;
 }
 
-@media screen and (min-width: 280px) and (max-width: 769px) {
+@media screen and (min-width: 280px) and (max-width: 767px) {
     .mission {
         grid-template-columns: repeat(1, 1fr);
         height: fit-content;
@@ -475,9 +464,39 @@ header {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
+    .donate-box {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        place-items: center;
+    }
+    .donate-image {
+        width: 45rem;
+        margin: 3rem 0 3rem 0;
+    }
+    .about .about-overlay {
+        width: 45rem;
+    }
+    .about .about-text h3 {
+        color: #fbd45a;
+        font-family: 'Caveat', cursive;
+        font-size: 2rem;
+    }
+    .about .about-text h2 {
+        color: white;
+        font-size: 3rem;
+        font-weight: 900;
+    }
     .mission {
         height: fit-content;
+        width: fit-content;
+        margin-top: 50px;
     }
+    /* .mission {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    height: 100vh;
+    position: relative;
+} */
 }
 
 .mission-image-box {
@@ -538,16 +557,17 @@ header {
     margin-bottom: 1.875rem;
 }
 
-@media screen and (min-width: 280px) and (max-width: 769px) {
+@media screen and (min-width: 280px) and (max-width: 767px) {
     .mission .gradient {
         display: none;
     }
     .mission-and-story {
         grid-template-columns: repeat(2, 1fr);
+        place-items: center;
     }
     .mission-image-box {
-        padding-left: 30px;
-        padding-right: 20px;
+        padding-left: 0;
+        margin-inline: auto;
     }
     .mission-image1 img {
         width: 320px;
@@ -563,9 +583,11 @@ header {
         margin-right: 10px;
     }
     .mission-text .intro-text {
+        text-align: center;
         margin-top: 100px;
     }
     .mission-text h1 {
+        text-align: center;
         font-weight: 900;
         font-size: 2rem;
         margin-bottom: 1.875rem;
@@ -762,6 +784,7 @@ header {
     width: 30vw;
     overflow: hidden;
     box-shadow: 0px 3px 1.25rem rgba(0, 0, 0, 0.15);
+    padding-bottom: 50px;
 }
 
 .card .card-content .card-image {
@@ -802,14 +825,16 @@ header {
     position: relative;
     border-radius: 20px;
     background: rgb(248, 235, 237);
-    margin-top: 20px;
-    height: 7rem;
+    margin-top: 1.25rem;
+    /* height: 7rem; */
+    height: fit-content;
+    max-width: 100%;
     padding: 2rem;
 }
 
 .progress-bar {
     position: absolute;
-    top: 50px;
+    top: 3.125rem;
     width: 82%;
     height: 0.5rem;
     border-radius: 30px;
@@ -817,7 +842,8 @@ header {
 }
 
 .progress-bar .progressing {
-    width: 36%;
+    /* width: 36%; */
+    width: 7rem;
     height: 100%;
     background: rgb(60, 107, 99);
     border-radius: 30px;
@@ -826,19 +852,19 @@ header {
 .progress-bar .circle {
     position: absolute;
     left: 0;
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     background: white;
     border: 6px solid rgb(60, 107, 99);
     border-radius: 50%;
-    transform: translateY(-15px) translateX(88px);
+    transform: translateY(-75%) translateX(450%);
 }
 
 .circle::after {
     position: absolute;
     content: '36%';
     right: 0;
-    top: -1.6rem;
+    top: -290%;
     color: black;
     font-size: 0.8rem;
     font-weight: 900;
@@ -896,13 +922,13 @@ header {
     .card {
         border-radius: 1.25rem;
         background-color: white;
-        height: 85vh;
+        height: fit-content;
         width: fit-content;
         box-shadow: 0px 3px 1.25rem rgba(0, 0, 0, 0.15);
     }
-    .progress-bar .circle {
-        transform: translateY(-15px) translateX(67px);
-    }
+    /* .progress-bar .circle {
+        transform: translateY(-15%) translateX(67%);
+    } */
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
@@ -911,6 +937,9 @@ header {
     }
     .card {
         height: fit-content;
+    }
+    .progress-bar {
+        width: 90%;
     }
 }
 
@@ -948,8 +977,11 @@ header {
 .testimonials-section .row2 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 2.1875rem;
-    padding: 0 3.125rem 6.25rem 3.125rem;
+    grid-gap: 20px;
+    margin-inline: auto;
+    margin-bottom: 6rem;
+    place-items: center;
+    max-width: 1300px;
 }
 
 .testimonials-section .row2 .testimonial-image {
@@ -959,8 +991,8 @@ header {
 }
 
 .testimonials-section .row2 .testimonial-image img {
-    width: 15rem;
-    height: 15rem;
+    width: 18rem;
+    height: 18rem;
     object-fit: cover;
     border-radius: 50%;
 }
@@ -969,7 +1001,8 @@ header {
     border: 0.375rem solid rgb(241, 237, 237);
     height: 25rem;
     border-radius: 1.25rem;
-    padding: 2.5rem;
+    padding: 2rem;
+    margin-inline: auto;
     text-align: center;
     position: relative;
     box-shadow: 0px 2px 2rem rgba(0, 0, 0, 0.1);
@@ -1047,14 +1080,13 @@ header {
 @media screen and (min-width: 280px) and (max-width: 769px) {
     .testimonials-section .row2 {
         grid-template-columns: repeat(1, 1fr);
-        padding: 0rem 0.5rem;
-        margin-bottom: 100px;
+        grid-gap: 0;
     }
     .testimonials-section .testimonial {
         margin-bottom: 4rem;
     }
     .testimonials-section .row2 .testimonial-content {
-        line-height: 2;
+        line-height: 1.5;
         margin-bottom: 10px;
     }
     .testimonials-section .images {
@@ -1099,14 +1131,15 @@ header {
     color: white;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    padding-left: 3.125rem;
-    padding-right: 3.125rem;
+    grid-gap: 20px;
     height: 80vh;
+    padding-top: 6.25rem;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 .support-section .row1 .support {
     line-height: 2;
-    padding-top: 6.25rem;
 }
 
 .support-section .row1 .support p {
@@ -1119,7 +1152,7 @@ header {
     height: 70%;
     background: rgb(43, 42, 42);
     border-radius: 1.875rem;
-    left: 3.4375rem;
+    left: 5%;
     top: 45%;
     padding: 6.25rem;
     /* margin-bottom: 6.25rem; */
@@ -1231,10 +1264,25 @@ header {
 @media screen and (min-width: 280px) and (max-width: 769px) {
     .support-section .row1 {
         grid-template-columns: repeat(1, 1fr);
+        grid-gap: 0;
+        padding-top: 10px;
+        padding-bottom: 0px;
+        line-height: 1.5;
         height: 100vh;
+    }
+    .support-section .row1 .support {
+        height: 50px;
     }
     .support-section .row2 {
         grid-template-columns: repeat(1, 1fr);
+        width: 90%;
+        height: fit-content;
+        background: rgb(43, 42, 42);
+        border-radius: 1.875rem;
+        left: 5%;
+        top: 60%;
+        padding: 4rem 1rem 0 1rem;
+        color: white;
     }
     .support-section .row2 .part-1 {
         display: grid;
@@ -1245,19 +1293,7 @@ header {
         margin-bottom: 2rem;
     }
     .support-section .row2 h1 {
-        font-size: 1.5rem;
-    }
-    .support-section .row2 {
-        position: absolute;
-        width: 90%;
-        height: 70%;
-        background: rgb(43, 42, 42);
-        border-radius: 1.875rem;
-        left: 1.2rem;
-        top: 60%;
-        padding: 4rem 1rem 0 1rem;
-        margin-bottom: 6.25rem;
-        color: white;
+        font-size: 2rem;
     }
     .support-section .row2 .part-1 .col-2 {
         display: grid;
@@ -1266,40 +1302,42 @@ header {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
-    .support-section {
-        height: 80vh;
-    }
     .support-section .row1 {
-        height: 50vh;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 0;
+        padding-top: 10px;
+        padding-bottom: 0px;
+        line-height: 1.5;
+        height: 100vh;
+    }
+    .support-section .row1 .support {
+        height: 50px;
     }
     .support-section .row2 {
+        grid-template-columns: repeat(1, 1fr);
         width: 90%;
-        height: 50vh;
-        left: 2.5rem;
-        top: 30%;
-        padding: 3rem;
+        height: fit-content;
+        background: rgb(43, 42, 42);
+        border-radius: 1.875rem;
+        left: 5%;
+        top: 60%;
+        padding: 4rem 1rem 0 1rem;
+        color: white;
+    }
+    .support-section .row2 .part-1 {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .support-section .row2 .part-1 .col-1 {
+        width: 100%;
+        margin-bottom: 2rem;
+    }
+    .support-section .row2 h1 {
+        font-size: 2rem;
     }
     .support-section .row2 .part-1 .col-2 {
         display: grid;
-        place-items: end;
-    }
-    .support-section .row2 h1 {
-        font-size: 3rem;
-    }
-    .support-section .row2 .desc {
-        font-size: 1rem;
-    }
-    .support-section .row2 .col-1 {
-        width: 20rem;
-    }
-    .support-section .row2 h1 {
-        font-weight: 900;
-        font-size: 2.8125rem;
-    }
-    .support-progress-box {
-        position: relative;
-        height: 7rem;
-        margin-top: 5rem;
+        place-items: start;
     }
 }
 
@@ -1310,7 +1348,7 @@ header {
 /* TEAM SECTION */
 
 .team-section {
-    margin: 14rem 3.125rem 8rem 3.125rem;
+    margin: 1rem 3.125rem 8rem 3.125rem;
 }
 
 .team-section .team {
@@ -1371,7 +1409,7 @@ header {
 
 @media screen and (min-width: 280px) and (max-width: 769px) {
     .team-section .row1 {
-        margin-top: 22rem;
+        margin-top: 30rem;
     }
     .team-section h1 {
         font-weight: 900;
@@ -1474,6 +1512,10 @@ header {
     position: relative;
 }
 
+.news-section .row2 .col-1 .news-image {
+    height: 28.125rem;
+}
+
 .news-section .col-2 {
     grid-area: col-2;
 }
@@ -1502,8 +1544,8 @@ header {
     padding: 0 3.125rem;
 }
 
-.news-section .row2 .col-1 .news-image {
-    height: 28.125rem;
+.news-section .row2 .col-2 .news-image {
+    position: relative;
 }
 
 .news-section .row2 .col-1 img {
@@ -1516,7 +1558,7 @@ header {
     position: absolute;
     color: rgb(60, 107, 99);
     background: white;
-    padding: 0.3125rem 1.875rem;
+    padding: 0.3125rem 1rem;
     font-size: 1.25rem;
     border-radius: 1.25rem;
     font-family: 'Caveat', cursive;
@@ -1527,7 +1569,7 @@ header {
     right: 8%;
 }
 
-.news-section .news .badge {
+.news-section .col-2 .badge {
     top: 75%;
     left: 20%;
 }
@@ -1672,6 +1714,7 @@ header {
 @media screen and (min-width: 280px) and (max-width: 769px) {
     .brands-section .row1 {
         grid-template-columns: repeat(2, 1fr);
+        place-items: center;
     }
 }
 
