--- a/styles.css
+++ b/styles.css
@@ -285,7 +285,6 @@ header {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    margin-top: 10%;
 }
 
 .overlay {
@@ -1348,7 +1347,7 @@ header {
 /* TEAM SECTION */
 
 .team-section {
-    margin: 1rem 3.125rem 8rem 3.125rem;
+    margin: 14rem 3.125rem 8rem 3.125rem;
 }
 
 .team-section .team {
@@ -1408,8 +1407,12 @@ header {
 }
 
 @media screen and (min-width: 280px) and (max-width: 769px) {
+    .team-section {
+        margin-inline: auto;
+    }
     .team-section .row1 {
         margin-top: 30rem;
+        margin-inline: auto;
     }
     .team-section h1 {
         font-weight: 900;
@@ -1417,14 +1420,15 @@ header {
     }
     .team-section .row2 {
         grid-template-columns: repeat(1, 1fr);
-        grid-gap: 120px;
+        grid-gap: 20px;
+        margin-inline: auto;
     }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
     .team-section .row2 {
         grid-template-columns: repeat(2, 1fr);
-        grid-gap: 120px;
+        grid-gap: 20px;
     }
 }
 
@@ -1438,7 +1442,7 @@ header {
     height: 100vh;
     width: 100%;
     position: relative;
-    margin-bottom: 9.375rem;
+    margin-bottom: 6rem;
 }
 
 .map-section .row1 iframe {
